--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
     "@types/chart.js": "^2.9.41",
+    "@xyflow/react": "^12.8.4",
     "chart.js": "^4.5.0",
+    "d3": "^5.16.0",
     "eslint-plugin-boundaries": "^5.0.1",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.1",
+    "react-graph-vis": "^1.0.7",
     "react-router-dom": "^7.8.0",
     "recharts": "^3.1.2",
     "tailwindcss": "^4.1.11",
