--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.1.1",
     "react-graph-vis": "^1.0.7",
     "react-router-dom": "^7.8.0",
+    "reactflow": "^11.11.4",
     "recharts": "^3.1.2",
     "tailwindcss": "^4.1.11",
     "vite-tsconfig-paths": "^5.1.4"
